--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         href="./css/main.css">
 </head>
 
-<body class="bg-light">
+<body class="bg-light" style="background-image: url('img_girl.jpg');">
 
     <div class="container pt-3 border-bottom">
-        
+
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="#services"
@@ -35,85 +35,22 @@
         </header>
     </div>
 
-    <div class="container my-5">
-        <div id="carouselExampleControls"
-            class="carousel slide"
-            data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="p-5 mb-4 bg-info rounded-5">
-                        <div class="container-fluid py-5">
-                            <h1 class="display-5 fw-bold px-5">We
-                                provide<br>
-                                software solutions<br>
-                                for your business!</h1>
-                            <hr>
-                            <div class="">
-                                <a href="#about"
-                                    class="btn btn-warning btn-lg rounded-pill px-4"
-                                    type="button">Get Started</a>
-                                <a href="#services"
-                                    class="btn btn-dark btn-lg rounded-pill px-5"
-                                    type="button">Services</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="p-5 mb-4 bg-success rounded-5">
-                        <div class="container-fluid py-5">
-                            <h1 class="display-5 fw-bold text-center">We
-                                provide<br>
-                                software solutions<br>
-                                for your business!</h1>
-                            <hr>
-                            <div class="text-center">
-                                <a href="#about"
-                                    class="btn btn-warning btn-lg rounded-pill px-4"
-                                    type="button">Get Started</a>
-                                <a href="#services"
-                                    class="btn btn-dark btn-lg rounded-pill px-5"
-                                    type="button">Services</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="p-5 mb-4 bg-primary rounded-5">
-                        <div class="container-fluid py-5">
-                            <h1 class="display-5 fw-bold text-end px-5">We
-                                provide<br>
-                                software solutions<br>
-                                for your business!</h1>
-                            <hr>
-                            <div class="text-end">
-                                <a href="#about"
-                                    class="btn btn-warning btn-lg rounded-pill px-4"
-                                    type="button">Get Started</a>
-                                <a href="#services"
-                                    class="btn btn-dark btn-lg rounded-pill px-5"
-                                    type="button">Services</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev"
-                type="button"
-                data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"
-                    aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next"
-                type="button"
-                data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon"
-                    aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    <div class="my-5">
+        <div class="bg-dark text-white p-5">
+            <br><br><br>
+                <h1 class="px-5 mx-5 display-1">Building Tailored </h1>
+                <h1 class="px-5 mx-5 display-1">Software Solutions</h1>
+            <br>
+            <p class="text-white col-lg-5 px-5 mx-5 fs-6">Lorem ipsum dolor, sit amet
+                consectetur adipisicing elit. Velit
+                eos harum rerum. Labore molestias doloremque
+                exercitationem
+                magnam. Harum fuga ex quisquam. Esse sit amet assumenda
+                id
+                quasi animi ipsum, et vero provident cupiditate tempora
+                optio.
+            </p>
+            <br><br><br>
         </div>
     </div>
     <div class="container">
